# metro

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PROJECT_ANALYSIS.md  PUBLIC_LITERATURE.md  README.md  build_local.ps1  check_bytes.ps1  check_lines.ps1  ddfix.ini.example  run_build.ps1
.github/workflows/: build.yml
ddfix/: CMakeLists.txt  D3D9Context.cpp  D3D9Context.h  dllmain.cpp  exports.def  fxc_wrapper.ps1
ddfix/Common/: Logging.h  NamespaceDDraw.h  Pillarbox.cpp  Pillarbox.h
ddfix/Config/: ConfigManager.cpp  ConfigManager.h  IniParser.cpp  IniParser.h
ddfix/Debug/: HudRenderer.cpp  HudRenderer.h  ImGuiBackend.cpp  ImGuiBackend.h  PerfCounter.cpp  PerfCounter.h
ddfix/ddraw/: ExecuteBufferParser.cpp  ExecuteBufferParser.h  GBufferRenderer.cpp  GBufferRenderer.h  IDirect3D.cpp  IDirect3D.h  IDirect3D2.cpp  IDirect3D2.h  IDirect3D3.cpp  IDirect3D3.h  IDirect3D7.cpp  IDirect3D7.h  IDirect3DDevice.cpp  IDirect3DDevice.h  IDirect3DDevice2.cpp  IDirect3DDevice2.h  IDirect3DDevice3.cpp  IDirect3DDevice3.h  IDirect3DDevice7.cpp  IDirect3DDevice7.h  IDirect3DExecuteBuffer.cpp  IDirect3DExecuteBuffer.h  IDirect3DLight.cpp  IDirect3DLight.h  IDirect3DMaterial.cpp  IDirect3DMaterial.h  IDirect3DMaterial2.cpp  IDirect3DMaterial2.h  IDirect3DMaterial3.cpp  IDirect3DMaterial3.h  IDirect3DTexture.cpp  IDirect3DTexture.h  IDirect3DTexture2.cpp  IDirect3DTexture2.h  IDirect3DVertexBuffer.cpp  IDirect3DVertexBuffer.h  IDirect3DVertexBuffer7.cpp  IDirect3DVertexBuffer7.h  IDirect3DViewport.cpp  IDirect3DViewport.h  (+20 more)
ddfix/shaders/: Deferred.hlsl  GBuffer.hlsl  Shadow.hlsl
ddfix/shaders/SMAA/: AreaTex.h  README.md  SMAA_BlendingWeight.fx  SMAA_EdgeDetection.fx  SMAA_NeighborhoodBlending.fx  SearchTex.h
docs/: gap-analysis-6.5.9.md
docs/literature/: README.md
docs/literature/cascade-shadow-maps/: README.md
docs/literature/gpu-gems-1/: README.md
docs/literature/gpu-gems-2/: README.md
docs/literature/gpu-gems-3/: README.md
docs/literature/wine-d3d9/: README.md
minhook/: CMakeLists.txt
scripts/: example_lightcontrol.as
tests/: CMakeLists.txt  SingleTest.h  main.cpp  test_d3d9_context.cpp  test_deferred_lighting.cpp  test_execute_buffer.cpp  test_gbuffer.cpp  test_hlsl.cpp  test_idirectdraw.cpp  test_ini_parser.cpp  test_perf_counter.cpp  test_script_api.cpp  test_shadow.cpp  test_smaa.cpp  test_wrapper.cpp
tools/: add_utf8_bom.ps1  check_bom.ps1  check_hlsl_bom.ps1  ci_check_bom.ps1  ensure_shadow_bom.ps1  fix_bom.ps1  strip_cicheck_bom.ps1  strip_deferred_bom.ps1
